kubernetes/my-fastapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: my-fastapi
  name: my-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-fastapi
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: my-fastapi
    spec:
      containers:
      - env:
        - name: WORKER_CLASS
          value: "workers.ConfigurableWorker"
        image: my-fastapi:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
        name: my-fastapi
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
