kubernetes/my-fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-fastapi
  labels:
    service: my-fastapi
spec:
  selector:
    app: my-fastapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
